# TurboHiker

./: CMakeLists.txt  README.md  main.cpp  turbohiker-game.sh
logic/: Collider.cpp  Collider.h  Coordinates.h  Entity.cpp  Entity.h  Hiker.cpp  Hiker.h  HikerEnemy.cpp  HikerEnemy.h  HikerPassing.cpp  HikerPassing.h  HikerPlayer.cpp  HikerPlayer.h  Layout.h  World.cpp  World.h
logic/Factories/: HikerFactory.h  LayoutFactory.h
logic/Observer/: Observer.cpp  Observer.h  ObserverInterface.h  Subject.cpp  Subject.h  SubjectInterface.h
logic/Singletons/: RandomeNumber.cpp  RandomeNumber.h  Transformation.cpp  Transformation.h
sfml/: EnemySFML.cpp  EnemySFML.h  Game.cpp  Game.h  HikerSFML.cpp  HikerSFML.h  LanesSFML.cpp  LanesSFML.h  PassingSFML.cpp  PassingSFML.h  PlayerSFML.cpp  PlayerSFML.h  SpeechBubbleSFML.cpp  SpeechBubbleSFML.h  TextFieldSFML.cpp  TextFieldSFML.h
sfml/Factories/HikerFactories/: EnemyFactory.cpp  EnemyFactory.h  KnightFactory.cpp  KnightFactory.h  PlayerFactory.cpp  PlayerFactory.h  VerminFactory.cpp  VerminFactory.h
sfml/Factories/LayoutFactories/: LineFactory.cpp  LineFactory.h  ScoreFactory.cpp  ScoreFactory.h  SpeechBubbleFactory.cpp  SpeechBubbleFactory.h
